// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Circular Progress - snapshots should return a Circular Progress with custom animations 1`] = `
.c2 {
  height: 24px;
  width: 24px;
  display: block;
  max-width: 100%;
  overflow: hidden;
  margin: auto;
}

.c3 {
  -webkit-backface-visibility: hidden;
  fill: none;
  stroke: hsl(0,0%,75%);
}

.c1 {
  -webkit-animation-name: fvtopB;
  animation-name: fvtopB;
  -webkit-animation-duration: 5s;
  animation-duration: 5s;
  -webkit-animation-timing-function: linear;
  animation-timing-function: linear;
  -webkit-animation-iteration-count: infinite;
  animation-iteration-count: infinite;
}

.c4 {
  -webkit-backface-visibility: hidden;
  fill: none;
  stroke: hsl(312.8,67.8%,47.5%);
  -webkit-animation-name: iwSrvQ;
  animation-name: iwSrvQ;
  -webkit-animation-duration: 5s;
  animation-duration: 5s;
  -webkit-animation-timing-function: linear;
  animation-timing-function: linear;
  -webkit-animation-delay: 0s;
  animation-delay: 0s;
  -webkit-animation-iteration-count: infinite;
  animation-iteration-count: infinite;
  -webkit-animation-direction: normal;
  animation-direction: normal;
  -webkit-animation-fill-mode: none;
  animation-fill-mode: none;
  -webkit-animation-play-state: running;
  animation-play-state: running;
}

.c0 {
  box-sizing: border-box;
}

<div>
  <div
    class="c0 c1"
  >
    <svg
      class="c2"
      display="block"
      height="24"
      overflow="hidden"
      width="24"
    >
      <circle
        circumference="62.83185307179586"
        class="c3"
        cx="12"
        cy="12"
        r="10"
        stroke-width="4"
      />
      <circle
        circumference="62.83185307179586"
        class="c4"
        cx="12"
        cy="12"
        r="10"
        stroke-dasharray="62.83185307179586"
        stroke-width="4"
      />
    </svg>
  </div>
</div>
`;

exports[`Circular Progress - snapshots should return a Circular Progress with custom caption, value and total 1`] = `
.c5 {
  background-color: transparent;
  color: inherit;
  font-family: -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Helvetica,Arial,sans-serif,"Apple Color Emoji","Segoe UI Emoji","Segoe UI Symbol";
  font-size: 0.8rem;
  font-weight: inherit;
  -webkit-letter-spacing: inherit;
  -moz-letter-spacing: inherit;
  -ms-letter-spacing: inherit;
  letter-spacing: inherit;
  line-height: 1.5;
  text-align: center;
  -webkit-text-decoration: inherit;
  text-decoration: inherit;
  margin-bottom: 1rem;
  margin-top: 0;
}

.c2 {
  height: 24px;
  width: 24px;
  display: block;
  max-width: 100%;
  overflow: hidden;
  margin: auto;
}

.c3 {
  -webkit-backface-visibility: hidden;
  fill: none;
  stroke: hsl(0,0%,75%);
}

.c1 {
  -webkit-animation-name: fvtopB;
  animation-name: fvtopB;
  -webkit-transform: rotate(-90deg);
  -ms-transform: rotate(-90deg);
  transform: rotate(-90deg);
}

.c4 {
  -webkit-backface-visibility: hidden;
  fill: none;
  stroke: hsl(312.8,67.8%,47.5%);
  -webkit-animation-name: gObxMc;
  animation-name: gObxMc;
  stroke-dashoffset: 25.132741228718345px;
}

.c0 {
  box-sizing: border-box;
}

<div>
  <div
    class="c0 c1"
    transform="rotate(-90deg)"
  >
    <svg
      class="c2"
      display="block"
      height="24"
      overflow="hidden"
      width="24"
    >
      <circle
        circumference="62.83185307179586"
        class="c3"
        cx="12"
        cy="12"
        r="10"
        stroke-width="4"
      />
      <circle
        circumference="62.83185307179586"
        class="c4"
        cx="12"
        cy="12"
        r="10"
        stroke-dasharray="62.83185307179586"
        stroke-dashoffset="25.132741228718345px"
        stroke-width="4"
      />
    </svg>
  </div>
  <p
    class="c5"
  >
    3/5
  </p>
</div>
`;

exports[`Circular Progress - snapshots should return a Determinate Circular Progress with the appropriate styling 1`] = `
.c2 {
  height: 24px;
  width: 24px;
  display: block;
  max-width: 100%;
  overflow: hidden;
  margin: auto;
}

.c3 {
  -webkit-backface-visibility: hidden;
  fill: none;
  stroke: hsl(0,0%,90%);
}

.c1 {
  -webkit-animation-name: fvtopB;
  animation-name: fvtopB;
  -webkit-transform: rotate(-90deg);
  -ms-transform: rotate(-90deg);
  transform: rotate(-90deg);
}

.c4 {
  -webkit-backface-visibility: hidden;
  fill: none;
  stroke: hsl(4.1,89.6%,58.4%);
  -webkit-animation-name: wYSdJ;
  animation-name: wYSdJ;
  -webkit-animation-duration: 1.5s;
  animation-duration: 1.5s;
  -webkit-animation-timing-function: linear;
  animation-timing-function: linear;
  -webkit-animation-delay: 0s;
  animation-delay: 0s;
  -webkit-animation-iteration-count: infinite;
  animation-iteration-count: infinite;
  -webkit-animation-direction: normal;
  animation-direction: normal;
  -webkit-animation-fill-mode: none;
  animation-fill-mode: none;
  -webkit-animation-play-state: running;
  animation-play-state: running;
}

.c0 {
  box-sizing: border-box;
}

<div>
  <div
    class="c0 c1"
    transform="rotate(-90deg)"
  >
    <svg
      class="c2"
      display="block"
      height="24"
      overflow="hidden"
      width="24"
    >
      <circle
        circumference="62.83185307179586"
        class="c3"
        cx="12"
        cy="12"
        r="10"
        stroke-width="4"
      />
      <circle
        circumference="62.83185307179586"
        class="c4"
        cx="12"
        cy="12"
        r="10"
        stroke-dasharray="62.83185307179586"
        stroke-width="4"
      />
    </svg>
  </div>
</div>
`;

exports[`Circular Progress - snapshots should return an Indeterminate Circular Progress with default styling 1`] = `
.c2 {
  height: 24px;
  width: 24px;
  display: block;
  max-width: 100%;
  overflow: hidden;
  margin: auto;
}

.c3 {
  -webkit-backface-visibility: hidden;
  fill: none;
  stroke: hsl(0,0%,75%);
}

.c1 {
  -webkit-animation-name: fvtopB;
  animation-name: fvtopB;
  -webkit-animation-duration: 1.5s;
  animation-duration: 1.5s;
  -webkit-animation-timing-function: linear;
  animation-timing-function: linear;
  -webkit-animation-iteration-count: infinite;
  animation-iteration-count: infinite;
}

.c4 {
  -webkit-backface-visibility: hidden;
  fill: none;
  stroke: hsl(312.8,67.8%,47.5%);
  -webkit-animation-name: gObxMc;
  animation-name: gObxMc;
  -webkit-animation-duration: 1.5s;
  animation-duration: 1.5s;
  -webkit-animation-timing-function: linear;
  animation-timing-function: linear;
  -webkit-animation-delay: 0s;
  animation-delay: 0s;
  -webkit-animation-iteration-count: infinite;
  animation-iteration-count: infinite;
  -webkit-animation-direction: normal;
  animation-direction: normal;
  -webkit-animation-fill-mode: none;
  animation-fill-mode: none;
  -webkit-animation-play-state: running;
  animation-play-state: running;
}

.c0 {
  box-sizing: border-box;
}

<div>
  <div
    class="c0 c1"
  >
    <svg
      class="c2"
      display="block"
      height="24"
      overflow="hidden"
      width="24"
    >
      <circle
        circumference="62.83185307179586"
        class="c3"
        cx="12"
        cy="12"
        r="10"
        stroke-width="4"
      />
      <circle
        circumference="62.83185307179586"
        class="c4"
        cx="12"
        cy="12"
        r="10"
        stroke-dasharray="62.83185307179586"
        stroke-width="4"
      />
    </svg>
  </div>
</div>
`;

exports[`Linear Progress - snapshots should return a Determinate Linear Progress with the appropriate styling 1`] = `
.c1 {
  background: #e0ffff;
}

.c3 {
  background: hsl(35.8,100%,50%);
  -webkit-animation-name: eudNeh;
  animation-name: eudNeh;
  -webkit-animation-duration: 1.5s;
  animation-duration: 1.5s;
  -webkit-animation-timing-function: linear;
  animation-timing-function: linear;
  -webkit-animation-delay: 0s;
  animation-delay: 0s;
  -webkit-animation-iteration-count: infinite;
  animation-iteration-count: infinite;
  -webkit-animation-direction: normal;
  animation-direction: normal;
  -webkit-animation-fill-mode: none;
  animation-fill-mode: none;
  -webkit-animation-play-state: running;
  animation-play-state: running;
}

.c0 {
  box-sizing: border-box;
  height: 5px;
  overflow: hidden;
}

.c2 {
  box-sizing: border-box;
  height: 100%;
  width: 100%;
}

<div>
  <div
    class="c0 c1"
  >
    <div
      class="c2 c3"
    />
  </div>
</div>
`;

exports[`Linear Progress - snapshots should return a Linear Progress with custom animations and captions 1`] = `
.c7 {
  height: 20px;
  width: 20px;
  display: block;
  max-width: 100%;
  overflow: hidden;
  margin: auto;
}

.c8 {
  -webkit-backface-visibility: hidden;
  fill: none;
  stroke: hsl(0,0%,75%);
}

.c6 {
  -webkit-animation-name: fvtopB;
  animation-name: fvtopB;
  -webkit-transform: rotate(-90deg);
  -ms-transform: rotate(-90deg);
  transform: rotate(-90deg);
}

.c9 {
  -webkit-backface-visibility: hidden;
  fill: none;
  stroke: hsl(312.8,67.8%,47.5%);
  -webkit-animation-name: eFGfhQ;
  animation-name: eFGfhQ;
  -webkit-animation-duration: 5s;
  animation-duration: 5s;
  -webkit-animation-timing-function: linear;
  animation-timing-function: linear;
  -webkit-animation-delay: 0s;
  animation-delay: 0s;
  -webkit-animation-iteration-count: 1;
  animation-iteration-count: 1;
  -webkit-animation-direction: normal;
  animation-direction: normal;
  -webkit-animation-fill-mode: none;
  animation-fill-mode: none;
  -webkit-animation-play-state: running;
  animation-play-state: running;
}

.c1 {
  background: transparent;
}

.c3 {
  background: hsl(312.8,67.8%,47.5%);
  -webkit-animation-name: lgmbxA;
  animation-name: lgmbxA;
  -webkit-animation-duration: 5s;
  animation-duration: 5s;
  -webkit-animation-timing-function: linear;
  animation-timing-function: linear;
  -webkit-animation-delay: 0s;
  animation-delay: 0s;
  -webkit-animation-iteration-count: 2;
  animation-iteration-count: 2;
  -webkit-animation-direction: normal;
  animation-direction: normal;
  -webkit-animation-fill-mode: none;
  animation-fill-mode: none;
  -webkit-animation-play-state: running;
  animation-play-state: running;
}

.c0 {
  box-sizing: border-box;
  height: 5px;
  overflow: hidden;
}

.c2 {
  box-sizing: border-box;
  height: 100%;
  width: 100%;
}

.c5 {
  box-sizing: border-box;
}

.c4 {
  -webkit-box-pack: end;
  -webkit-justify-content: flex-end;
  -ms-flex-pack: end;
  justify-content: flex-end;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  padding-top: 8px;
  padding-bottom: 8px;
}

<div>
  <div
    class="c0 c1"
  >
    <div
      class="c2 c3"
    />
  </div>
  <div
    class="c4"
  >
    <div
      class="c5 c6"
      transform="rotate(-90deg)"
    >
      <svg
        class="c7"
        display="block"
        height="20"
        overflow="hidden"
        width="20"
      >
        <circle
          circumference="56.548667764616276"
          class="c8"
          cx="10"
          cy="10"
          r="9"
          stroke-width="2"
        />
        <circle
          circumference="56.548667764616276"
          class="c9"
          cx="10"
          cy="10"
          r="9"
          stroke-dasharray="56.548667764616276"
          stroke-width="2"
        />
      </svg>
    </div>
  </div>
</div>
`;

exports[`Linear Progress - snapshots should return a Linear Progress with custom caption, value and total 1`] = `
.c4 {
  background-color: transparent;
  color: inherit;
  font-family: -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Helvetica,Arial,sans-serif,"Apple Color Emoji","Segoe UI Emoji","Segoe UI Symbol";
  font-size: 0.8rem;
  font-weight: inherit;
  -webkit-letter-spacing: inherit;
  -moz-letter-spacing: inherit;
  -ms-letter-spacing: inherit;
  letter-spacing: inherit;
  line-height: 1.5;
  text-align: inherit;
  -webkit-text-decoration: inherit;
  text-decoration: inherit;
  margin-bottom: 1rem;
  margin-top: 0;
}

.c1 {
  background: hsl(0,0%,75%);
}

.c3 {
  background: hsl(312.8,67.8%,47.5%);
  -webkit-animation-name: hbshSv;
  animation-name: hbshSv;
}

.c0 {
  box-sizing: border-box;
  height: 5px;
  overflow: hidden;
}

.c2 {
  box-sizing: border-box;
  width: 13.333333333333334%;
  height: 100%;
}

<div>
  <div
    class="c0 c1"
  >
    <div
      class="c2 c3"
    />
  </div>
  <p
    class="c4"
  >
    20% of 150
  </p>
</div>
`;

exports[`Linear Progress - snapshots should return an Indeterminate Linear Progress with default styling 1`] = `
.c1 {
  background: hsl(0,0%,75%);
}

.c3 {
  background: hsl(312.8,67.8%,47.5%);
  -webkit-animation-name: hbshSv;
  animation-name: hbshSv;
  -webkit-animation-duration: 1.5s;
  animation-duration: 1.5s;
  -webkit-animation-timing-function: linear;
  animation-timing-function: linear;
  -webkit-animation-delay: 0s;
  animation-delay: 0s;
  -webkit-animation-iteration-count: infinite;
  animation-iteration-count: infinite;
  -webkit-animation-direction: normal;
  animation-direction: normal;
  -webkit-animation-fill-mode: none;
  animation-fill-mode: none;
  -webkit-animation-play-state: running;
  animation-play-state: running;
}

.c0 {
  box-sizing: border-box;
  height: 5px;
  overflow: hidden;
}

.c2 {
  box-sizing: border-box;
  height: 100%;
  width: 100%;
}

<div>
  <div
    class="c0 c1"
  >
    <div
      class="c2 c3"
    />
  </div>
</div>
`;
